// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorsCitationView test  should render component with no authors 1`] = `
<AuthorsCitationView
  className="citationAuthors"
  publication={Object {}}
  searchKey={
    Object {
      "key": "fez_record_search_key_author",
      "order": "rek_author_order",
      "subkey": "rek_author",
    }
  }
>
  <span
    className="citationAuthors empty"
  />
</AuthorsCitationView>
`;

exports[`AuthorsCitationView test  should render component with one author 1`] = `
<AuthorsCitationView
  className="citationAuthors"
  publication={
    Object {
      "fez_record_search_key_author": Array [
        Object {
          "rek_author": "Pedroso, Marcelo Monteiro",
          "rek_author_id": null,
          "rek_author_order": 1,
          "rek_author_pid": "UQ:678742",
        },
      ],
    }
  }
  searchKey={
    Object {
      "key": "fez_record_search_key_author",
      "order": "rek_author_order",
      "subkey": "rek_author",
    }
  }
>
  <span
    className="citationAuthors"
  >
    <CitationView
      className="citationAuthor"
      prefix=""
      suffix=" "
      value="Pedroso, Marcelo Monteiro"
    >
      <span
        className="citationAuthor"
      >
        Pedroso, Marcelo Monteiro
         
      </span>
    </CitationView>
  </span>
</AuthorsCitationView>
`;

exports[`AuthorsCitationView test  should render component with ten authors and show more link 1`] = `
<AuthorsCitationView
  className="citationAuthors"
  prefix="Authored by: "
  publication={
    Object {
      "fez_record_search_key_author": Array [
        Object {
          "rek_author": "Pedroso, Marcelo Monteiro",
          "rek_author_id": null,
          "rek_author_order": 1,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Smith, J",
          "rek_author_id": null,
          "rek_author_order": 2,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Andersen, J",
          "rek_author_id": null,
          "rek_author_order": 3,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Andersen, J",
          "rek_author_id": null,
          "rek_author_order": 4,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Andersen, J",
          "rek_author_id": null,
          "rek_author_order": 5,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Andersen, J",
          "rek_author_id": null,
          "rek_author_order": 6,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Andersen, J",
          "rek_author_id": null,
          "rek_author_order": 7,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Andersen, J",
          "rek_author_id": null,
          "rek_author_order": 8,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Andersen, J",
          "rek_author_id": null,
          "rek_author_order": 9,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Andersen, J",
          "rek_author_id": null,
          "rek_author_order": 10,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Andersen, J",
          "rek_author_id": null,
          "rek_author_order": 11,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Andersen, J",
          "rek_author_id": null,
          "rek_author_order": 12,
          "rek_author_pid": "UQ:678742",
        },
      ],
    }
  }
  searchKey={
    Object {
      "key": "fez_record_search_key_author",
      "order": "rek_author_order",
      "subkey": "rek_author",
    }
  }
  suffix=" people."
>
  <span
    className="citationAuthors"
  >
    Authored by: 
    <CitationView
      className="citationAuthor"
      prefix=""
      suffix=""
      value="Pedroso, Marcelo Monteiro"
    >
      <span
        className="citationAuthor"
      >
        Pedroso, Marcelo Monteiro
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=", "
      suffix=""
      value="Smith, J"
    >
      <span
        className="citationAuthor"
      >
        , 
        Smith, J
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=", "
      suffix=""
      value="Andersen, J"
    >
      <span
        className="citationAuthor"
      >
        , 
        Andersen, J
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=", "
      suffix=""
      value="Andersen, J"
    >
      <span
        className="citationAuthor"
      >
        , 
        Andersen, J
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=", "
      suffix=""
      value="Andersen, J"
    >
      <span
        className="citationAuthor"
      >
        , 
        Andersen, J
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=", "
      suffix=""
      value="Andersen, J"
    >
      <span
        className="citationAuthor"
      >
        , 
        Andersen, J
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=", "
      suffix=""
      value="Andersen, J"
    >
      <span
        className="citationAuthor"
      >
        , 
        Andersen, J
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=", "
      suffix=""
      value="Andersen, J"
    >
      <span
        className="citationAuthor"
      >
        , 
        Andersen, J
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=", "
      suffix=""
      value="Andersen, J"
    >
      <span
        className="citationAuthor"
      >
        , 
        Andersen, J
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=", "
      suffix=""
      value="Andersen, J"
    >
      <span
        className="citationAuthor"
      >
        , 
        Andersen, J
      </span>
    </CitationView>
    <a
      onClick={[Function]}
      onKeyPress={[Function]}
    >
      <CitationView
        className="citationShowMoreAuthors"
        prefix=" "
        suffix=" "
        value="2 more..."
      >
        <span
          className="citationShowMoreAuthors"
        >
           
          2 more...
           
        </span>
      </CitationView>
    </a>
     people.
  </span>
</AuthorsCitationView>
`;

exports[`AuthorsCitationView test  should render component with ten authors and show more link 2`] = `
<AuthorsCitationView
  className="citationAuthors"
  prefix="Authored by: "
  publication={
    Object {
      "fez_record_search_key_author": Array [
        Object {
          "rek_author": "Pedroso, Marcelo Monteiro",
          "rek_author_id": null,
          "rek_author_order": 1,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Smith, J",
          "rek_author_id": null,
          "rek_author_order": 2,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Andersen, J",
          "rek_author_id": null,
          "rek_author_order": 3,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Andersen, J",
          "rek_author_id": null,
          "rek_author_order": 4,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Andersen, J",
          "rek_author_id": null,
          "rek_author_order": 5,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Andersen, J",
          "rek_author_id": null,
          "rek_author_order": 6,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Andersen, J",
          "rek_author_id": null,
          "rek_author_order": 7,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Andersen, J",
          "rek_author_id": null,
          "rek_author_order": 8,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Andersen, J",
          "rek_author_id": null,
          "rek_author_order": 9,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Andersen, J",
          "rek_author_id": null,
          "rek_author_order": 10,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Andersen, J",
          "rek_author_id": null,
          "rek_author_order": 11,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Andersen, J",
          "rek_author_id": null,
          "rek_author_order": 12,
          "rek_author_pid": "UQ:678742",
        },
      ],
    }
  }
  searchKey={
    Object {
      "key": "fez_record_search_key_author",
      "order": "rek_author_order",
      "subkey": "rek_author",
    }
  }
  suffix=" people."
>
  <span
    className="citationAuthors"
  >
    Authored by: 
    <CitationView
      className="citationAuthor"
      prefix=""
      suffix=""
      value="Pedroso, Marcelo Monteiro"
    >
      <span
        className="citationAuthor"
      >
        Pedroso, Marcelo Monteiro
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=", "
      suffix=""
      value="Smith, J"
    >
      <span
        className="citationAuthor"
      >
        , 
        Smith, J
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=", "
      suffix=""
      value="Andersen, J"
    >
      <span
        className="citationAuthor"
      >
        , 
        Andersen, J
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=", "
      suffix=""
      value="Andersen, J"
    >
      <span
        className="citationAuthor"
      >
        , 
        Andersen, J
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=", "
      suffix=""
      value="Andersen, J"
    >
      <span
        className="citationAuthor"
      >
        , 
        Andersen, J
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=", "
      suffix=""
      value="Andersen, J"
    >
      <span
        className="citationAuthor"
      >
        , 
        Andersen, J
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=", "
      suffix=""
      value="Andersen, J"
    >
      <span
        className="citationAuthor"
      >
        , 
        Andersen, J
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=", "
      suffix=""
      value="Andersen, J"
    >
      <span
        className="citationAuthor"
      >
        , 
        Andersen, J
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=", "
      suffix=""
      value="Andersen, J"
    >
      <span
        className="citationAuthor"
      >
        , 
        Andersen, J
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=", "
      suffix=""
      value="Andersen, J"
    >
      <span
        className="citationAuthor"
      >
        , 
        Andersen, J
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=", "
      suffix=""
      value="Andersen, J"
    >
      <span
        className="citationAuthor"
      >
        , 
        Andersen, J
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=" and "
      suffix=" "
      value="Andersen, J"
    >
      <span
        className="citationAuthor"
      >
         and 
        Andersen, J
         
      </span>
    </CitationView>
    <a
      onClick={[Function]}
      onKeyPress={[Function]}
    >
      <CitationView
        className="citationShowMoreAuthors"
        prefix=" "
        suffix=" "
        value="Show less"
      >
        <span
          className="citationShowMoreAuthors"
        >
           
          Show less
           
        </span>
      </CitationView>
    </a>
     people.
  </span>
</AuthorsCitationView>
`;

exports[`AuthorsCitationView test  should render component with three authors 1`] = `
<AuthorsCitationView
  className="citationAuthors"
  publication={
    Object {
      "fez_record_search_key_author": Array [
        Object {
          "rek_author": "Pedroso, Marcelo Monteiro",
          "rek_author_id": null,
          "rek_author_order": 1,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Smith, J",
          "rek_author_id": null,
          "rek_author_order": 2,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Andersen, J",
          "rek_author_id": null,
          "rek_author_order": 3,
          "rek_author_pid": "UQ:678742",
        },
      ],
    }
  }
  searchKey={
    Object {
      "key": "fez_record_search_key_author",
      "order": "rek_author_order",
      "subkey": "rek_author",
    }
  }
>
  <span
    className="citationAuthors"
  >
    <CitationView
      className="citationAuthor"
      prefix=""
      suffix=""
      value="Pedroso, Marcelo Monteiro"
    >
      <span
        className="citationAuthor"
      >
        Pedroso, Marcelo Monteiro
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=", "
      suffix=""
      value="Smith, J"
    >
      <span
        className="citationAuthor"
      >
        , 
        Smith, J
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=" and "
      suffix=" "
      value="Andersen, J"
    >
      <span
        className="citationAuthor"
      >
         and 
        Andersen, J
         
      </span>
    </CitationView>
  </span>
</AuthorsCitationView>
`;

exports[`AuthorsCitationView test  should render component with three authors with prefix/suffix 1`] = `
<AuthorsCitationView
  className="citationAuthors"
  prefix="Authored by: "
  publication={
    Object {
      "fez_record_search_key_author": Array [
        Object {
          "rek_author": "Pedroso, Marcelo Monteiro",
          "rek_author_id": null,
          "rek_author_order": 1,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Smith, J",
          "rek_author_id": null,
          "rek_author_order": 2,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Andersen, J",
          "rek_author_id": null,
          "rek_author_order": 3,
          "rek_author_pid": "UQ:678742",
        },
      ],
    }
  }
  searchKey={
    Object {
      "key": "fez_record_search_key_author",
      "order": "rek_author_order",
      "subkey": "rek_author",
    }
  }
  suffix=" people."
>
  <span
    className="citationAuthors"
  >
    Authored by: 
    <CitationView
      className="citationAuthor"
      prefix=""
      suffix=""
      value="Pedroso, Marcelo Monteiro"
    >
      <span
        className="citationAuthor"
      >
        Pedroso, Marcelo Monteiro
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=", "
      suffix=""
      value="Smith, J"
    >
      <span
        className="citationAuthor"
      >
        , 
        Smith, J
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=" and "
      suffix=" "
      value="Andersen, J"
    >
      <span
        className="citationAuthor"
      >
         and 
        Andersen, J
         
      </span>
    </CitationView>
     people.
  </span>
</AuthorsCitationView>
`;

exports[`AuthorsCitationView test  should render component with two authors 1`] = `
<AuthorsCitationView
  className="citationAuthors"
  publication={
    Object {
      "fez_record_search_key_author": Array [
        Object {
          "rek_author": "Pedroso, Marcelo Monteiro",
          "rek_author_id": null,
          "rek_author_order": 1,
          "rek_author_pid": "UQ:678742",
        },
        Object {
          "rek_author": "Smith, J",
          "rek_author_id": null,
          "rek_author_order": 2,
          "rek_author_pid": "UQ:678742",
        },
      ],
    }
  }
  searchKey={
    Object {
      "key": "fez_record_search_key_author",
      "order": "rek_author_order",
      "subkey": "rek_author",
    }
  }
>
  <span
    className="citationAuthors"
  >
    <CitationView
      className="citationAuthor"
      prefix=""
      suffix=""
      value="Pedroso, Marcelo Monteiro"
    >
      <span
        className="citationAuthor"
      >
        Pedroso, Marcelo Monteiro
      </span>
    </CitationView>
    <CitationView
      className="citationAuthor"
      prefix=" and "
      suffix=" "
      value="Smith, J"
    >
      <span
        className="citationAuthor"
      >
         and 
        Smith, J
         
      </span>
    </CitationView>
  </span>
</AuthorsCitationView>
`;
